descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 201X-XX-XX  Release 7.28.0                                     ---
----------------------------------------------------------------------

* improved gqa plot file handling and documentation - Sean Morrison
* improved rt usage reporting with categorized options - Sean Morrison
* removed rt -f framerate option for animating shaders - Sean Morrison
* removed "pixd" support: rt -d option and pixdsplit - Sean Morrison
* fixed fbserv timeout errors on some BSD platforms - Cezar Elnazli
* fixed rtcheck bug handling reversed overlap pairs - Saran Narayan
* new workflow GUI for detecting and fixing geometry overlap errors
	- Sean Morrison, Nick Reed, Saran Narayan
* fixed gqa printing wrong grid size on no overlaps - Saran Narayan
* fixed pix-png creating corrupt PNG files on Windows - Sean Morrison
* added "check overlaps" menu option to Archer - Saran Narayan
* improved 'idents' command portability - Daniel Ramirez
* changed remrt/rtsrv to no longer report overlaps - Sean Morrison
* fixed unhandled exception in MGED's Overlap Tool - Saran Narayan
* fixed geometry directory building bug in remrt/rtsrv - Sean Morrison
* fixed gcv problem with full paths on Windows - Cliff Yapp
* removed precision limitation in NIRT input parsing - Cliff Yapp
* added new example geometry models: chess and die pieces - Jeff Sieu
* new 'openid' command for listing available region IDs - Nick Reed
* improved triangle mesh error detection for "bot check" command
	- Nick Reed, Cliff Yapp, Jon Engbert
* fixed graphical mode initial page loading in brlman - Cliff Yapp
* added 'bot_dump' command to MGED - Nick Reed
* ported MGED 'screengrab' command to Windows - Nick Reed
* removed spectral tracing: libmultispectral & rttherm - Cliff Yapp
* sped up raytracing by 10% - Cezar Elnazli

